# curvematch-app

./: .env.development  README.md  index.html  package-lock.json  package.json  tailwind.config.js  test-gpx-minification.html  tsconfig.app.json  vite.config.ts
backend/: .env.example  .gitignore  Cargo.toml
backend/migrations/: 20240101000001_create_users_table.sql  20240101000002_create_saved_routes_table.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/api/: auth.rs  library.rs  match_routes.rs  mod.rs  routes.rs
backend/src/auth/: jwt.rs  middleware.rs  password.rs
backend/src/db/: mod.rs  models.rs  pool.rs
backend/src/db/queries/: mod.rs  routes.rs  users.rs
backend/src/matching/: algorithms.rs  engine.rs  mod.rs  spatial_index.rs
backend/src/models/: mod.rs  request.rs  route.rs  user.rs
backend/src/utils/: elevation.rs  gpx_minifier.rs  gpx_parser.rs  mod.rs
backend/tests/: integration_tests.rs
backend/tests/test_data/: sample.gpx
src/: .env.development  .env.production  App.tsx  vite-env.d.ts
src/api/: client.ts
src/components/layout/: Footer.tsx  Navbar.tsx
src/modules/auth/: index.ts
src/modules/auth/api/: authApi.ts
src/modules/auth/components/: AuthGuard.tsx  LoginForm.tsx  SignupForm.tsx
src/modules/auth/hooks/: useAuth.ts
src/modules/auth/store/: authStore.ts
src/modules/common/: index.ts
src/modules/maps/: index.ts
src/modules/matching/: index.ts
src/pages/: Landing.tsx  Library.tsx  LibraryDetail.tsx  Login.tsx  Match.tsx  Signup.tsx
src/styles/: globals.css
src/utils/: gpxMinifier.ts
(+22 files in other folders)
