[package]
name = "curvematch-backend"
version = "0.1.0"
edition = "2021"
authors = ["CurveMatch Team"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
axum-extra = { version = "0.9", features = ["cookie", "cookie-private"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# Geospatial
geo = "0.28"
geojson = "0.24"
gpx = "0.10"
rstar = "0.12"

# HTTP
hyper = "1.4"
bytes = "1.7"
multer = "3.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
dotenvy = "0.15"
config = "0.14"

# Utilities
async-trait = "0.1"
futures = "0.3"
rand = "0.8"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
